--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,13 @@
           </li>
         </a>
         {%- endif -%}
+        {%- if site.plainwhite.social_links.stackoverflow -%}
+        <a href="https://twitter.com/{{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
+          <li>
+            <i class="icon-stackoverflow"></i>
+          </li>
+        </a>
+        {%- endif -%}
         {%- if site.plainwhite.social_links.instagram -%}
         <a href="https://instagram.com/{{ site.plainwhite.social_links.instagram }}" target="_blank">
           <li>
