--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         </a>
         {%- endif -%}
         {%- if site.plainwhite.social_links.stackoverflow -%}
-        <a href="https://twitter.com/{{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
+        <a href="https://stackoverflow.com/users/{{ site.plainwhite.social_links.stackoverflow }}" target="_blank">
           <li>
             <i class="icon-stackoverflow"></i>
           </li>
