--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,6 @@ body > * {
   font-family: 'Ropa Sans', sans-serif !important;
 }
 
-* {
+p {
   font-family: 'Ropa Sans', sans-serif !important;
 }
