--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,3 +25,7 @@ body > * {
 p {
   font-family: 'Ropa Sans', sans-serif !important;
 }
+
+.post {
+  font-family: 'Ropa Sans', sans-serif !important;
+}
