--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,7 @@
   @import "dark";
 {%- endif -%}
 
+@import "modal"
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 .ropa-sans {
