--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,6 +136,7 @@
       {{ content }}
     </section>
   </main>
+  {%- include image-modal.html -%}
   {%- if site.plainwhite.analytics_id -%}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.plainwhite.analytics_id }}"></script>
   <script>
