Update and rename image-modal.html to modal-image.html

--- a/_includes/modal-image.html
+++ b/_includes/modal-image.html
@@ -1,4 +1,4 @@
-<div class="modal-img modal-img-preview">
+<div class="modal-img-background">
   <span class="modal-img-close">&times;</span>
   <img class="modal-img-content">
   <div class="modal-img-caption"></div>
