--- a/_includes/modal-image.html
+++ b/_includes/modal-image.html
@@ -14,7 +14,7 @@
     modalImage.onclick = () => {
       modalImgBackground.style.display = "block";
       modalImgContent.src = modalImage.src;
-      modalImgCaption.innerHTML = this.alt;
+      modalImgCaption.innerHTML = modalImage.alt;
     }
   });
 
