--- a/_includes/modal-image.html
+++ b/_includes/modal-image.html
@@ -21,6 +21,6 @@
   const modalImgClose = document.getElementsByClassName("modal-img-close")[0];
   
   modalImgClose.onclick = () => { 
-    modal.style.display = "none";
+    modalImgBackground.style.display = "none";
   }
 </script>
