--- a/_sass/modal.scss
+++ b/_sass/modal.scss
@@ -27,8 +27,10 @@
 .modal-img-content {
   margin: auto;
   display: block;
-  width: 80%;
+  width: 100%;
+  /*
   max-width: 700px;
+  */
 }
 
 /* Caption of Modal Image */
@@ -36,8 +38,10 @@
 .modal-img-caption {
   margin: auto;
   display: block;
-  width: 80%;
+  width: 100%;
+  /*
   max-width: 700px;
+  */
   text-align: center;
   color: #ccc;
   padding: 10px 0;
