--- a/_sass/comment-styles.scss
+++ b/_sass/comment-styles.scss
@@ -3,7 +3,7 @@
 
 $base-font-size:    18px !default;
 $comment-font-size: 17px !default;
-
+$base-font-weight:  400 !default;
 
 //
 // Staticman new comment form
