--- a/_sass/comment-styles.scss
+++ b/_sass/comment-styles.scss
@@ -4,6 +4,7 @@
 $base-font-size:    18px !default;
 $comment-font-size: 17px !default;
 $base-font-weight:  400 !default;
+$$base-line-height: 1rem !default;
 
 //
 // Staticman new comment form
