--- a/_sass/comment-styles.scss
+++ b/_sass/comment-styles.scss
@@ -6,6 +6,10 @@ $comment-font-size: 17px !default;
 $base-font-weight:  400 !default;
 $base-line-height:  1rem !default;
 $base-font-family:  'Ropa Sans' !default;
+$small-font-size: 12px !default;
+$grey-color: gray !default;
+$grey-color-light: lightgray !default;
+$text-color: black !default;
 
 //
 // Staticman new comment form
