--- a/_sass/comment-styles.scss
+++ b/_sass/comment-styles.scss
@@ -18,7 +18,7 @@ input, select, textarea, label, button {
 //    @extend body;
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
-    background-color: $background-color;
+    // background-color: $background-color;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
         -moz-font-feature-settings: "kern" 1;
