--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,5 @@
 <section class="comments" id="comment-section">
+  <h1>Hello from comments.html</h1>
   <hr>
   {% if site.data.comments[page.slug] %}
   <!-- Existing comments -->
