--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
   {%- if site.plainwhite.disqus_shortname -%}
   <div id="disqus_thread" style="margin-top:25px"></div>
   <div id="momomomomo">
-    {% include comments.html %}
+    {%- include comments.html -%}
   </div>
   <script>
     var disqus_config = function () {
