--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,6 +137,7 @@
     </section>
   </main>
   {%- include modal-image.html -%}
+  {%- include comments.html -%}
   {%- if site.plainwhite.analytics_id -%}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.plainwhite.analytics_id }}"></script>
   <script>
