--- a/_sass/comment-styles.scss
+++ b/_sass/comment-styles.scss
@@ -81,6 +81,7 @@ button:hover {
 // Staticman existing comments
 //
 .comments {
+    padding: 1rem;
 }
 .comment__new {
     padding: 0px 0px 14px 0px;
