--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,8 +26,10 @@ body > * {
 
 p {
   font-family: 'Ropa Sans', sans-serif !important;
+  font-size: 20px;
 }
 
 .post {
   font-family: 'Ropa Sans', sans-serif !important;
+  
 }
