--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -16,8 +16,8 @@ $leftWidth: 220px;
 }
 
 body {
-  font-family: "Raleway", sans-serif;
-  font-size: 16px;
+  font-family: "Ropa Sans", sans-serif;
+  font-size: 20px;
   line-height: 1.2em;
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -90,7 +90,7 @@ main {
     flex-direction: column;
     align-items: center;
     h2 {
-      font-size: 22px;
+      font-size: 26px;
       margin-top: 25px;
       margin-bottom: 0;
       color: #222222;
@@ -98,7 +98,7 @@ main {
     }
     .tagline {
       text-align: center;
-      font-size: 22px;
+      font-size: 26px;
       margin-top: 17px;
       color: #aaa;
       white-space: pre-wrap;
@@ -122,7 +122,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   a {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
   li {
     i {
@@ -147,7 +147,7 @@ main {
 
     a {
       display: block;
-      font-family: 'Merriweather';
+      font-family: "Ropa Sans";
       text-align: center;
       padding: 1rem 0;
       text-decoration: none;
@@ -269,7 +269,8 @@ main {
   transition: width 0.1s;
 }
 table {
-  th, td {
+  th,
+  td {
     padding: 8px 13px;
     border: 1px solid #dfe2e5;
   }
