--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
         {{ "now" | date: "%Y" }}</p>
       {%- if site.plainwhite.dark_mode -%}
       <div>
-        <p>Dark Mode
+        <p id="dark--mode--toggle">Dark Mode
           <i class="icon-moon"></i>
           <label class="switch">
             <input type="checkbox" id="dark-mode-toggle">
