--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -24,6 +24,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#dark--mode--toggle {
+  font-size: 16px;
+}
+
 img,
 embed,
 object,
@@ -98,7 +102,7 @@ main {
     }
     .tagline {
       text-align: center;
-      font-size: 24px;
+      font-size: 16px;
       margin-top: 17px;
       color: #aaa;
       white-space: pre-wrap;
