--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,8 +119,8 @@
       {%- endif -%}
       {%- if site.plainwhite.dark_mode -%}
       <div>
-        <p id="dark--mode--toggle">Dark Mode
-          <i class="icon-moon"></i>
+        <p id="dark--mode--toggle">
+          <i class="icon-moon" title="Toggle Dark Mode"></i>
           <label class="switch">
             <input type="checkbox" id="dark-mode-toggle">
             <span class="slider round" onclick="toggleDarkMode()"></span>
