--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -103,7 +103,7 @@ main {
     .tagline {
       text-align: center;
       font-size: 16px;
-      margin-top: .1rem;
+      margin-top: .1rem !important;
       color: #aaa;
       white-space: pre-wrap;
       line-height: normal;
