--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -230,7 +230,7 @@ main {
   padding-left: 30px;
 }
 .post {
-  font-family: "Merriweather", sans-serif;
+  font-family: "Ropa Sans", sans-serif;
   font-weight: 300;
   color: #222;
   line-height: 1.9em;
@@ -251,7 +251,7 @@ main {
   h4,
   h5,
   h6 {
-    font-family: Raleway, sans-serif;
+    font-family: "Ropa Sans", sans-serif;
   }
 }
 .posts-labelgroup {
@@ -280,6 +280,6 @@ table {
   }
   th {
     background-color: #eee;
-    font-family: Raleway;
+    font-family: "Ropa Sans", sans-serif;
   }
 }
