--- a/_includes/post-footer-bottom.html
+++ b/_includes/post-footer-bottom.html
@@ -6,7 +6,9 @@
     </div>
 
     <div class="go-top">
-      <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
+      <a class="smoothscroll" style="font-size: 36px" title="Back to Top" href="#top">
+        ^
+      </a>
     </div>
   </div>
 </div>
