--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-full">
       <div class="footer-logo">
-        <a class="footer-site-logo" href="#0"><img src="post-hola_files/logo.png" alt="Homepage" /></a>
+        <a class="footer-site-logo" href="#0"><img src="" alt="Homepage" /></a>
       </div>
 
       {%- include post-footer-social.html -%}
