--- a/_includes/post-head.html
+++ b/_includes/post-head.html
@@ -5,8 +5,9 @@
 <link rel="stylesheet" href="/assets/post2/base.css" />
 <link rel="stylesheet" href="/assets/post2/vendor.css" />
 <link rel="stylesheet" href="/assets/post2/main.css" />
+<link rel="stylesheet" href="/assets/post2/post.css" />
 <script src="/assets/post2/modernizr.js"></script>
-<script src="/assets/js/pace.js"></script>
+<script src="/assets/post2/pace.js"></script>
 <!--
     <link rel="shortcut icon" href="https://www.styleshout.com/templates/preview/Hola10/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="https://www.styleshout.com/templates/preview/Hola10/favicon.ico" type="image/x-icon" />
