--- a/_includes/post-header-nav.html
+++ b/_includes/post-header-nav.html
@@ -1,9 +1,5 @@
 <nav class="header-nav-wrap">
   <ul class="header-nav">
-    <li><a href="https://www.styleshout.com/templates/preview/Hola10/index.html#home" title="home">Home</a></li>
-    <li><a href="https://www.styleshout.com/templates/preview/Hola10/index.html#about" title="about">About</a></li>
-    <li><a href="https://www.styleshout.com/templates/preview/Hola10/index.html#works" title="works">Works</a></li>
-    <li class="current"><a href="https://www.styleshout.com/templates/preview/Hola10/blog.html" title="blog">Blog</a></li>
-    <li><a href="https://www.styleshout.com/templates/preview/Hola10/index.html#contact" title="contact">Contact</a></li>
+    <li><a href="https://mattoestreich.com" title="blog">mattoestreich.com</a></li>
   </ul>
 </nav>
