--- a/_layouts/post2.html
+++ b/_layouts/post2.html
@@ -1,6 +1,7 @@
 ---
 layout: post-default
 ---
-<div>
-    {{ content }}
+
+<div class="row blog-content">
+  <div class="col-full blog-content__main">{{ content }}</div>
 </div>
