--- a/assets/post2/main.css
+++ b/assets/post2/main.css
@@ -58,8 +58,8 @@
  *
  * ------------------------------------------------------------------- */
 
-@import url("iconic/css/iconmonstr-iconic-font.min.css");
-@import url("fonts.css");
+/* @import url("/assets/post2/iconmonstr-iconic-font.min.css"); */
+/* @import url("/assets/post2/fonts.css"); */
 
 
 
