--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?14804211');
-  src: url('../font/fontello.eot?14804211#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?14804211') format('woff2'),
-       url('../font/fontello.woff?14804211') format('woff'),
-       url('../font/fontello.ttf?14804211') format('truetype'),
-       url('../font/fontello.svg?14804211#fontello') format('svg');
+  src: url('../font/fontello.eot?41480889');
+  src: url('../font/fontello.eot?41480889#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?41480889') format('woff2'),
+       url('../font/fontello.woff?41480889') format('woff'),
+       url('../font/fontello.ttf?41480889') format('truetype'),
+       url('../font/fontello.svg?41480889#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?14804211#fontello') format('svg');
+    src: url('../font/fontello.svg?41480889#fontello') format('svg');
   }
 }
 */
@@ -59,10 +59,13 @@
 .icon-calendar-1:before { content: '\e801'; } /* '' */
 .icon-stackoverflow:before { content: '\e802'; } /* '' */
 .icon-email:before { content: '\e803'; } /* '' */
+.icon-stackoverflow-2:before { content: '\e804'; } /* '' */
 .icon-search:before { content: '\e805'; } /* '' */
+.icon-up:before { content: '\e806'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-pinterest-squared:before { content: '\f0d3'; } /* '' */
 .icon-youtube:before { content: '\f167'; } /* '' */
+.icon-stackoverflow-1:before { content: '\f16c'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-flickr:before { content: '\f16e'; } /* '' */
 .icon-dribbble:before { content: '\f17d'; } /* '' */
