--- a/_includes/post/head.html
+++ b/_includes/post/head.html
@@ -2,12 +2,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <title>{{ page.title | default: site.title }}</title>
-<link rel="stylesheet" href="/assets/post2/base.css" />
-<link rel="stylesheet" href="/assets/post2/vendor.css" />
-<link rel="stylesheet" href="/assets/post2/main.css" />
-<link rel="stylesheet" href="/assets/post2/post.css" />
-<script src="/assets/post2/modernizr.js"></script>
-<script src="/assets/post2/pace.js"></script>
+<link rel="stylesheet" href="/assets/post/base.css" />
+<link rel="stylesheet" href="/assets/post/vendor.css" />
+<link rel="stylesheet" href="/assets/post/main.css" />
+<link rel="stylesheet" href="/assets/post/post.css" />
+<script src="/assets/post/modernizr.js"></script>
+<script src="/assets/post/pace.js"></script>
 <!--
     <link rel="shortcut icon" href="https://www.styleshout.com/templates/preview/Hola10/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="https://www.styleshout.com/templates/preview/Hola10/favicon.ico" type="image/x-icon" />
