--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,7 +1,7 @@
 ---
-layout: post-default
+layout: article-default
 ---
-
+<!-- `article.html` aka `post.html` if that name was not taken -->
 <div class="row blog-content">
   <div class="col-full blog-content__main">{{ content }}</div>
 </div>
