--- a/assets/post/post.css
+++ b/assets/post/post.css
@@ -6,6 +6,10 @@ body,
   font-family: 'Ropa Sans', sans-serif;
 }
 
+p {
+	font-size: 2rem;
+}
+
 h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
   font-family: 'Ropa Sans', sans-serif !important;
 }
@@ -21,4 +25,8 @@ blockquote p {
 	padding: 5px 20px;
 	border-radius: 2px;
 	margin-right: 10px;
+}
+
+.site-logo img {
+	height: 70px;
 }
