--- a/_includes/post/head.html
+++ b/_includes/post/head.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="/assets/post/vendor.css" />
 <link rel="stylesheet" href="/assets/post/main.css" />
 <link rel="stylesheet" href="/assets/post/post.css" />
+<link rel="stylesheet" href="/assets/post/comment-style.css" />
 <script src="/assets/post/modernizr.js"></script>
 <script src="/assets/post/pace.js"></script>
 <!--
