--- a/_includes/article/footer/index.html
+++ b/_includes/article/footer/index.html
@@ -4,7 +4,7 @@
       <div class="footer-logo">
         <a class="footer-site-logo" href="#0"><img src="{{site.baseurl }}/{{ site.plainwhite.portfolio_image }}" alt="{{ site.plainwhite.name }}" /></a>
       </div>
-      <!--{%- include post/footer/social.html -%} -->
+      <!--{%- include article/footer/social.html -%} -->
     </div>
   </div>
   <div class="row footer-bottom">
