--- a/_includes/article/header/index.html
+++ b/_includes/article/header/index.html
@@ -1,17 +1,6 @@
 {%- assign date_format = site.plainwhite.date_format | default: "%b %-d, %Y" -%}
 <!-- page header/blog hero ================================================== -->
-{% if page.headerImage %}
-<div>
-<div class="page-header page-header--single page-hero" style="background-image: url({{ page.headerImage }});background-size: 
-{% if page.headerImageHeight %} {{ page.headerImageHeight }}
-{% else %} 100%
-{% endif %}
-{% if page.headerImageWidth %} {{ page.headerImageWidth }};" >
-{% else %} 100%;" >
-{% endif %}
-{% else %}
-<div class="page-header page-header--single page-hero"></div>
-{% endif %}
+<div class="header--image page-header page-header--single page-hero" style="background-image: url({{ page.headerImage }});">
   <div class="row page-header__content narrow">
     <article class="col-full">
       <div class="page-header__info">
