--- a/assets/article/post.css
+++ b/assets/article/post.css
@@ -1,25 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 html,
-body, 
+body,
 * {
-  font-family: 'Ropa Sans', sans-serif;
+	font-family: 'Ropa Sans', sans-serif;
 }
 
 p {
 	font-size: 2rem;
 }
 
-h1, h2, h3, h4, h5, h6, .h01, .h02, .h03, .h04, .h05, .h06 {
-  font-family: 'Ropa Sans', sans-serif !important;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h01,
+.h02,
+.h03,
+.h04,
+.h05,
+.h06 {
+	font-family: 'Ropa Sans', sans-serif !important;
 }
 
 blockquote p {
-  font-family: 'Ropa Sans', sans-serif !important;
+	font-family: 'Ropa Sans', sans-serif !important;
 }
 
 .post-categories a {
-  cursor: pointer !important;
+	cursor: pointer !important;
 	font-size: 14px;
 	background-color: #e3e3e3;
 	padding: 5px 20px;
@@ -29,4 +40,14 @@ blockquote p {
 
 .site-logo img {
 	height: 70px;
+}
+
+.header--image {
+	background-size: 100% 100%;	
+}	
+
+@media only screen and (max-width: 768px) {
+	.header--image {
+		background-size: 100% 100%;	
+	}	
 }
